@@ -1,3 +1,8 @@
+2006-02-24  Emmanuele Bassi  <ebassi@gmail.com>
+
+	* gsearchtool.c: (): handle case when nautilus preferences are not
+	installed (patch by Frederic Crozat, closes bug #332457).
+
 2006-02-19  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* gsearchtool.c: (handle_locate_command_stdout_io): Remove
